objects/CSS_Claim_Submission__c.object
<CustomObject>
    <fields>
        <fullName>Account_Code__c</fullName>
        <label>Account Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BFC__c</fullName>
        <label>BFC</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMS_Claim_ReqJSON__c</fullName>
        <label>BMS Claim ReqJSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Batch_Picked_Date__c</fullName>
        <label>Batch Picked Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Batch_Processed_Date__c</fullName>
        <label>Batch Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Batch_Status__c</fullName>
        <label>Batch Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pre- Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CSS_Claims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CSS Claims</label>
        <referenceTo>CSS_Claims__c</referenceTo>
        <relationshipLabel>CSS Claim Submissions</relationshipLabel>
        <relationshipName>CSS_Claim_Submissions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ClaimCreatedDate__c</fullName>
        <label>ClaimCreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Claim_JSON__c</fullName>
        <label>Claim JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Claim_Number__c</fullName>
        <label>Claim Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Status__c</fullName>
        <label>Claim Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_Submission_Id__c</fullName>
        <formula>CSS_Claims__r.Name + &apos; - &apos; +  Individual_Claim_Id__c</formula>
        <label>Claim Submission Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Date__c</fullName>
        <label>Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Number__c</fullName>
        <label>Credit Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <label>Deductible</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ERP_Status__c</fullName>
        <description>To store send Claims to BMS webservice status</description>
        <label>ERP Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fail_Code__c</fullName>
        <label>Fail Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMS_Claim_Number__c</fullName>
        <label>IMS Claim Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual_Claim_Id__c</fullName>
        <label>Individual Claim Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Labor__c</fullName>
        <label>Labor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastUpdatedBy__c</fullName>
        <label>LastUpdatedBy</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastUpdatedDate__c</fullName>
        <label>LastUpdatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMU__c</fullName>
        <label>PMU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PartReturnToCenter__c</fullName>
        <label>PartReturnToCenter</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartiallyPaidFlag__c</fullName>
        <label>PartiallyPaidFlag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts__c</fullName>
        <label>Parts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PayCode__c</fullName>
        <label>PayCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SiebelPaymentReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SiebelPaymentReceived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Siebel_Claim_JSON__c</fullName>
        <label>Siebel Claim JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Siebel_Claim_Number__c</fullName>
        <label>Siebel Claim Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Status__c</fullName>
        <label>Siebel Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceSystemName__c</fullName>
        <label>SourceSystemName</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Number__c</fullName>
        <label>Statement Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Appealed/Resubmitted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
                <value>
                    <fullName>Information Only</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Paid as Submitted</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
                <value>
                    <fullName>Parts to Return</fullName>
                </value>
                <value>
                    <fullName>Pending Authorization</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>View All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Claim_Amount__c</fullName>
        <label>Total Claim Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_OC_Amount__c</fullName>
        <label>Total OC Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Paid__c</fullName>
        <label>Total Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Parts_Amount__c</fullName>
        <label>Total Parts Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_SRT_Amount__c</fullName>
        <label>Total SRT Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Towing_Amount__c</fullName>
        <label>Total Towing Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Travel_Amount__c</fullName>
        <label>Total Travel Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Travel__c</fullName>
        <label>Travel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPendingResponse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPendingResponse</label>
        <type>Checkbox</type>
    </fields>
    <label>CSS Claim Submission</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CSS_Claims__c</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Siebel_Status__c</columns>
        <columns>Account_Code__c</columns>
        <columns>Batch_Status__c</columns>
        <columns>Individual_Claim_Id__c</columns>
        <columns>Siebel_Claim_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CSS Claim Submission  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS Claim Submissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>